--- a/css/base/global.css
+++ b/css/base/global.css
@@ -4,3 +4,4 @@
 @import "../layout/container.css";
 @import "../layout/header.css";
 @import "../layout/footer.css";
+@import"../pages/what-we-do.css "
