--- a/css/layout/container.css
+++ b/css/layout/container.css
@@ -1,7 +1,5 @@
 .container {
   max-width: 1280px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 20px;
-  padding-right: 20px;
+  margin: 0 auto;
+  border: 1px solid red;
 }
