--- a/css/layout/container.css
+++ b/css/layout/container.css
@@ -1,4 +1,7 @@
 .container {
   max-width: 1280px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
 }
