--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>team work</title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 
-    <link rel="stylesheet" href="css/base/global.css" />
+    <link rel="stylesheet" href="../css/base/global.css" />
   </head>
   <body>
     <div class="wrapper">
