--- a/css/base/global.css
+++ b/css/base/global.css
@@ -6,3 +6,4 @@
 @import url(../layout/footer.css);
 @import url(../pages/what-we-do.css);
 @import url(../pages/home.css);
+@import url(../pages/media.css)
